API+metier avancée